# midas

./: .gitignore  LICENSE  README.md  monsters.txt  pyproject.toml
.github/workflows/: ci.yml
forensic-data/: hash16.report.txt  hash_random.txt  inodes.report.txt  inodes.txt  mtimes.report.txt  mtimes.txt  pids.report.txt  pids.txt  sizes.report.txt  sizes.txt
src/midas/: cli.py  microscope.py  scanner.py
src/midas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/midas/older/: random_microscope.py
tests/: test_cli_golden.py
tests/data/: timestampish.txt  weak_id.txt
tests/data/expected/: analyze_uniform.txt  analyze_weak_id.txt  analyze_weak_id_scan.txt
