[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midas"
version = "0.2.1"
description = "MIDAS — Modular Integer Dataset Analysis System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Giancarlo"}]
dependencies = []

[project.scripts]
midas = "midas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
